# Firmware-Engineer-Task

./: .gitignore  Brompton_Programming_Task.docx  CMakeLists.txt  Doxyfile  README.md  output
.devcontainer/: Dockerfile  devcontainer.json  reinstall-cmake.sh
.github/workflows/: ci.yml
docs/: classes.html  dir_64e73385a8b7738563c26ce10415b58d.html  index.html  namespacebitops.html
docs/html/: annotated.html  classbitops_1_1Utility-members.html  classbitops_1_1Utility.html  files.html  functions.html  functions_func.html  md_README.html  namespaces.html  pages.html  utility_8h_source.html
docs/html/search/: all_1.js  all_5.js  classes_0.js  functions_1.js  functions_2.js  functions_3.js  pages_0.js  searchdata.js
docs/search/: all_2.js  functions_4.js  searchdata.js
main/: CMakeLists.txt  main.c  main.cpp
test/unit_tests/: CMakeLists.txt
tests/: CMakeLists.txt  ut_utility.cpp
utility/: CMakeLists.txt  utility.cpp  utility.h
